fix: repalce getFirst() with get(x)
getFirst() results in compilation error, cannot find symbol error